text no longer overflows miniprofile box

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -171,6 +171,11 @@ div.mini-profile {
     margin-bottom: 0
   }
 
+  .row.row-no-margin {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
 }
 
 div.comment-area.last-comment-row {
